cabal-version: 2.4
name:          rakuten
version:       0.1.1.5
synopsis:      The Rakuten API in Haskell
description:
  See README at <https://github.com/matsubara0507/rakuten#readme>

category:      Web
homepage:      https://github.com/matsubara0507/rakuten#readme
bug-reports:   https://github.com/matsubara0507/rakuten/issues
author:        MATSUBARA Nobutada
maintainer:    MATSUBARA Nobutada
copyright:     2017-2019 MATSUBARA Nobutada
license:       MIT
license-file:  LICENSE
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/matsubara0507/rakuten

common deps
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  build-depends:
    , base                ^>=4.12
    , data-default-class  ^>=0.1.2
    , extensible          ^>=0.6.1
    , req                 ^>=2.1.0
    , text                ^>=1.2.4

library
  import:           deps
  hs-source-dirs:   src
  build-depends:
    , constraints  ^>=0.11.1
    , lens         ^>=4.17.1

  -- cabal-fmt: expand src
  exposed-modules:
    Rakuten
    Rakuten.Client
    Rakuten.Endpoints
    Rakuten.Endpoints.Ichiba
    Rakuten.Types
    Rakuten.Types.Base
    Rakuten.Types.Class
    Rakuten.Types.Error
    Rakuten.Types.Ichiba

  default-language: Haskell2010

test-suite spec
  import:           deps
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:
    , hspec           ^>=2.7.1
    , rakuten
    , servant-server  ^>=0.16
    , warp            ^>=3.3.0

  -- cabal-fmt: expand test -Spec
  other-modules:
    Rakuten.Endpoints.IchibaSpec
    Rakuten.Test.Class
    Rakuten.Test.Client
    Rakuten.Test.MockServer

  default-language: Haskell2010
